--- a/build.gradle
+++ b/build.gradle
@@ -6,21 +6,22 @@ buildscript {
         targetSdkVersion = 29
 
         // App dependencies
-        appCompatVersion = '1.1.0-beta01'
-        constraintLayoutVersion = '2.0.0-beta1'
+        appCompatVersion = '1.2.0-beta01'
+        constraintLayoutVersion = '2.0.0-beta4'
         coroutinesVersion = "1.3.0-RC"
-        fragmentVersion = '1.1.0-alpha09'
+        fragmentVersion = '1.3.0-alpha03'
         glideVersion = '4.9.0'
         gradleVersion = '3.5.3'
-        kotlinVersion = '1.3.41'
+        kotlinVersion = '1.3.61'
         ktlintVersion = '0.30.0'
-        ktxVersion = '1.0.2'
-        lifecycleVersion = '2.2.0-alpha02'
-        materialVersion = '1.0.0'
-        navigationVersion = '2.0.0'
-        recyclerViewVersion = '1.1.0-alpha05'
-        roomVersion = '2.2.0-alpha01'
-        workVersion = '2.1.0'
+        ktxVersion = '1.3.0-beta01'
+        lifecycleVersion = '2.2.0'
+        materialVersion = '1.1.0'
+        navigationVersion = '2.3.0-alpha04'
+        recyclerViewVersion = '1.2.0-alpha02'
+        swipeRefreshVersion = '1.0.0'
+        roomVersion = '2.2.5'
+        workVersion = '2.3.4'
         gsonVersion = '2.8.2'
         okhttp = '3.10.0'
         retrofit = '2.6.0'
